<?xml version="1.0"?>
<package>
  <name>asctec_ll_updated</name>
  <version>0.0.0</version>
  <description>Updated Indigo version of nmichael Asctec quadrotor code</description>

  <maintainer email="bezzo@todo.todo">bezzo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>asctec_packet_updated</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>cpp_common</build_depend>
  <build_depend>gencpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>tf2_py</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>asctec_packet_updated</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>cpp_common</run_depend>
  <run_depend>gencpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>tf2_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>tf2_py</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
